--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Calculator</title>
+        <script src="javascript.js" defer></script>
+
     </head>
 
     <body>
