Add basic calculator interface in html with dummy output

--- a/index.html
+++ b/index.html
@@ -4,10 +4,41 @@
     <head>
         <meta charset="UTF-8">
         <title>Calculator</title>
+        <link rel="stylesheet" href="style.css">
         <script src="javascript.js" defer></script>
 
     </head>
-
     <body>
+        <div class="interface">
+            <div class="container">
+                <div class="display-row">
+                    <div class="display">1234567890</div>
+                </div>
+                <div class="first-row">
+                    <button class="seven-btn">7</button>
+                    <button class="eight-btn">8</button>
+                    <button class="nine-btn">9</button>
+                    <button class="divide-btn">/</button>
+                </div>
+                <div class="second-row">
+                    <button class="four-btn">4</button>
+                    <button class="five-btn">5</button>
+                    <button class="six-btn">6</button>
+                    <button class="multiply-btn">x</button>
+                </div>
+                <div class="third-row">
+                    <button class="one-btn">1</button>
+                    <button class="two-btn">2</button>
+                    <button class="three-btn">3</button>
+                    <button class="subtract-btn">-</button>
+                </div>
+                <div class="fouth-row">
+                    <button class="clear-btn">Clear</button>
+                    <button class="zero-btn">0</button>
+                    <button class="add-btn">+</button>
+                    <button class="equal-btn">=</button>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
