--- a/index.html
+++ b/index.html
@@ -12,31 +12,31 @@
         <div class="interface">
             <div class="container">
                 <div class="display-row">
-                    <div class="display">1234567890</div>
+                    <div class="display"></div>
                 </div>
                 <div class="first-row">
-                    <button class="seven-btn">7</button>
-                    <button class="eight-btn">8</button>
-                    <button class="nine-btn">9</button>
-                    <button class="divide-btn">/</button>
+                    <button id="seven-btn">7</button>
+                    <button id="eight-btn">8</button>
+                    <button id="nine-btn">9</button>
+                    <button id="divide-btn">/</button>
                 </div>
                 <div class="second-row">
-                    <button class="four-btn">4</button>
-                    <button class="five-btn">5</button>
-                    <button class="six-btn">6</button>
-                    <button class="multiply-btn">x</button>
+                    <button id="four-btn">4</button>
+                    <button id="five-btn">5</button>
+                    <button id="six-btn">6</button>
+                    <button id="multiply-btn">x</button>
                 </div>
                 <div class="third-row">
-                    <button class="one-btn">1</button>
-                    <button class="two-btn">2</button>
-                    <button class="three-btn">3</button>
-                    <button class="subtract-btn">-</button>
+                    <button id="one-btn">1</button>
+                    <button id="two-btn">2</button>
+                    <button id="three-btn">3</button>
+                    <button id="subtract-btn">-</button>
                 </div>
                 <div class="fouth-row">
-                    <button class="clear-btn">Clear</button>
-                    <button class="zero-btn">0</button>
-                    <button class="add-btn">+</button>
-                    <button class="equal-btn">=</button>
+                    <button id="clear-btn">Clear</button>
+                    <button id="zero-btn">0</button>
+                    <button id="add-btn">+</button>
+                    <button id="equal-btn">=</button>
                 </div>
             </div>
         </div>
